# dll-hijack-minhook

./: .gitignore
dinput8/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dinput8.cpp  dinput8.def  dinput8.vcxproj  dinput8.vcxproj.filters  dinput8_asm.asm
hook-test/: CMakeLists.txt  main.cpp
